// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> renders correctly with a title and a logo 1`] = `
<View
  style={
    {
      "borderBottomColor": "#ECBDF2",
      "borderBottomWidth": 1,
      "flexDirection": "column",
      "margin": 5,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "margin": 5,
      }
    }
  >
    <Image
      source={
        {
          "testUri": "../../../src/images/logo.png",
        }
      }
      style={
        {
          "height": 40,
          "width": 40,
        }
      }
    />
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "flexDirection": "row",
          "height": 30,
          "opacity": 1,
        }
      }
      testID="shoppingCartButton"
    >
      <View
        style={
          [
            {
              "flexDirection": "row",
              "height": 30,
              "padding": 5,
            },
            {
              "backgroundColor": "#A51BB6",
            },
          ]
        }
      >
        <Image
          source={
            {
              "testUri": "../../../src/images/shopping-cart1.png",
            }
          }
          style={
            {
              "height": 20,
              "width": 20,
            }
          }
        />
        <Text
          style={
            [
              {
                "color": "white",
              },
              {
                "fontSize": 16,
                "marginLeft": 5,
              },
            ]
          }
        >
          $
          0
        </Text>
      </View>
    </View>
  </View>
  <Text
    style={
      {
        "color": "#A51BB6",
        "fontSize": 16,
        "fontWeight": "bold",
      }
    }
  >
    Home
  </Text>
</View>
`;

exports[`<Header /> renders correctly with a title and a shopping cart 1`] = `
<View
  style={
    {
      "borderBottomColor": "#ECBDF2",
      "borderBottomWidth": 1,
      "flexDirection": "column",
      "margin": 5,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "margin": 5,
      }
    }
  >
    <Image
      source={
        {
          "testUri": "../../../src/images/logo.png",
        }
      }
      style={
        {
          "height": 40,
          "width": 40,
        }
      }
    />
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "flexDirection": "row",
          "height": 30,
          "opacity": 1,
        }
      }
      testID="shoppingCartButton"
    >
      <View
        style={
          [
            {
              "flexDirection": "row",
              "height": 30,
              "padding": 5,
            },
            {
              "backgroundColor": "#ECBDF2",
            },
          ]
        }
      >
        <Image
          source={
            {
              "testUri": "../../../src/images/shopping-cart-p.png",
            }
          }
          style={
            {
              "height": 20,
              "width": 20,
            }
          }
        />
        <Text
          style={
            [
              {
                "color": "#A51BB6",
              },
              {
                "fontSize": 16,
                "marginLeft": 5,
              },
            ]
          }
        >
          $
          10
        </Text>
      </View>
      <Text
        style={
          {
            "backgroundColor": "#A51BB6",
            "color": "white",
            "fontSize": 12,
            "fontWeight": "bold",
            "height": 30,
            "textAlign": "center",
            "textAlignVertical": "center",
            "width": 20,
          }
        }
      >
        X
      </Text>
    </View>
  </View>
  <Text
    style={
      {
        "color": "#A51BB6",
        "fontSize": 16,
        "fontWeight": "bold",
      }
    }
  >
    Shopping Cart
  </Text>
</View>
`;
